# Fantasy-adventure

./: .gitignore  CMakeLists.txt  README.md  fantasy_adventure.cpp  main.cpp
src/txt/: chapter1.txt  chapter10.txt  chapter2.txt  chapter3.txt  chapter4.txt  chapter5.txt  chapter6.txt  chapter7.txt  chapter8.txt  chapter9.txt  ending.txt
utils/: character.cpp  character.h  game.cpp  game.h  item.cpp  item.h  utils.cpp  utils.h  window.cpp  window.h
